# hangul-typing

./: .gitignore  AGENTS.md  README.md  TODO.md  Taskfile.yml  biome.json  build.zig  build.zig.zon  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.github/workflows/: release.yml
docs/rationale/: 0001_level_progression_design.md  0002_keyboard_layout_support.md  0003_visual_design_system.md  0004_hangul_wasm_integration.md  0005_tauri_desktop_app.md  0006_copilot_ai_assistant.md
server/: build.zig  build.zig.zon
server/src/: main.zig
src/: main.zig
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  copilot.rs  lib.rs  main.rs
www/: app.js  hangul-ime-loader.js  hangul.wasm  index.html  korean-fonts.css  splash.html  style.css
www/src/: app.ts  assistant-ui.ts  constants.ts  copilot-client.ts  hangul-ime-fallback.test.ts  hangul-ime-fallback.ts  hangul-ime-loader.ts  keyboard.test.ts  keyboard.ts  levels.test.ts  levels.ts  storage.test.ts  storage.ts  tauri.ts  types.ts  ui.test.ts  ui.ts
