[package]
name = "hangul-typing"
version = "0.2.3"
description = "Learn Korean typing by playing. Break levels. Master Hangul."
authors = ["Pastel Sketchbook"]
license = "MIT"
repository = "https://github.com/pastel-sketchbook/hangul-typing"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "hangul_typing_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tauri = { version = "2.9.5", features = [] }
