[package]
name = "hangul-typing"
version = "0.3.7"
description = "Learn Korean typing by playing. Break levels. Master Hangul."
authors = ["Pastel Sketchbook"]
license = "GPL-2.0-or-later"
repository = "https://github.com/pastel-sketchbook/hangul-typing"
edition = "2024"
rust-version = "1.92.0"

[lib]
name = "hangul_typing_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tauri = { version = "2.9.5", features = ["macos-private-api"] }
